# tb-hamiltonian

./: .gitignore  LICENSE  README.md  calculations.py  chern_number.ipynb  chern_number.py  continuum.ipynb  potentials.py  pyproject.toml  requirements.txt  test.ipynb  test.py  test_aiida.ipynb  test_aiida_continuum.ipynb  test_aiida_onsite_sweep.ipynb  test_aiida_sweep_amplitude.ipynb  test_aiida_sweep_cell_size.ipynb  test_continuum.ipynb  test_continuum_new.ipynb  test_continuum_old.ipynb  utils.py  workflows.py
examples/: README.md
examples/BLG/AB/1x1/1/: non_standard_BLG_AB.vasp
examples/BLG/AB/primitive/: POSCAR
examples/BLG/AB/primitive/rep_1x1/: POSCAR
examples/BLG/AB/rectangular/rep_1x1/nn_1/: POSCAR
examples/BLG/AB/rectangular/rep_1x1/nn_1/null/: bands.npy  distances.npy
examples/graphene/1x1/1/: POSCAR  non_standard_graphene.vasp
examples/graphene/primitive/: POSCAR
examples/graphene/primitive/rep_1x1/nn_1/: POSCAR
examples/graphene/rectangular/rep_3x3/nn_1/: POSCAR
output/: README.md
references/: AB-BLG_VSL_continuum.ipynb  AB-BLG_VSL_continuum_Dirac.ipynb  continuum-model.ipynb
src/tb_hamiltonian/: __init__.py  calculations.py  continuum.py  hamiltonian.py  kamiltonian.py  potentials.py  utils.py  workflows.py
src/tb_hamiltonian/continuum/: __init__.py  new.py  old.py
