[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "tb-hamiltonian"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Edan Bainglass", email = "edan.bainglass@psi.ch" }]
maintainers = [{ name = "Edan Bainglass", email = "edan.bainglass@psi.ch" }]
keywords = ["physics", "tight-binding"]
classifiers = ["Operating System :: OS Independent", "Private :: Do Not Upload"]
dynamic = ["version", "description"]
dependencies = ["numpy", "scipy", "matplotlib", "ase"]

[project.optional-dependencies]
mpi = ["mpi4py"]

[project.urls]
Source = "https://github.com/edan-bainglass/tb-hamiltonian"
